--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <meta name="twitter:title" content="Slot138 | Agen Slot Online Gacor Resmi Terbaik Dan Terpercaya Deposit Pulsa  " />
     <meta name="twitter:description" content="Daftar Slot138 adalah situs judi slot online gacor terpercaya dengna deposit pulsa, yang akan memberikan bonus judi slot online terbanyak di Indonesia 2022. " />
     <link rel="preload" as="script" href="https://cdn.ampproject.org/v0.js">
+    <meta http-equiv="refresh" content="0; url=https://agenslot138terbaik.web.fc2.com/">
     <style amp-boilerplate>
         body {
             -webkit-animation: -amp-start 8s steps(1, end) 0s 1 normal both;
