--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-
 <!doctype html>
 <html ⚡ lang="id">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <title>SLOT138 - Daftar Judi Online Slot Deposit Via Dana Terpercaya</title>
-    <link rel="canonical" href="https://cloud-coord.codetwo.com/slot138/" />
+    <link rel="canonical" href="http://res.koding.com/" />
     <link rel="shortcut icon" href="https://rajabet.asia/img_slot138/icon/icon-slot138.png" sizes="16x16">
     <meta name="description" content="Slot138 merupakan daftar judi online slot deposit dana dengan deposit 10rb tanpa potongan gampang menang yang menghadirkan provider slot dana resmi di Indonesia." />
     <meta name="keywords" content="slot138, daftar slot138, situs slot138, login slot138, slot138 resmi, live chat slot138, link alternatif slot138, slot deposit dana" />
@@ -25,19 +24,18 @@
     <meta property="og:locale:alternate" content="en_ID" />
     <meta property="og:title" content="SLOT138 - Daftar Judi Online Slot Deposit Via Dana Terpercaya" />
     <meta property="og:description" content="Slot138 merupakan daftar judi online slot deposit dana dengan deposit 10rb tanpa potongan gampang menang yang menghadirkan provider slot dana resmi di Indonesia." />
-    <meta property="og:url" content="https://cloud-coord.codetwo.com/slot138/">
+    <meta property="og:url" content="http://res.koding.com/">
     <meta property="og:site_name" content="Slot138" />
     <meta property="og:image" content="https://i.ibb.co/TrQBWMv/banner-slot138.jpg" />
     <meta property="og:image:alt" content="Slot138" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@Slot138">
     <meta name="twitter:creator" content="@Slot138">
-    <meta name="twitter:domain" content="https://cloud-coord.codetwo.com/slot138/">
+    <meta name="twitter:domain" content="http://res.koding.com/">
     <meta name="twitter:title" content="SLOT138 - Daftar Judi Online Slot Deposit Via Dana Terpercaya">
     <meta name="twitter:description" content="Slot138 merupakan daftar judi online slot deposit dana dengan deposit 10rb tanpa potongan gampang menang yang menghadirkan provider slot dana resmi di Indonesia.">
     <meta name="twitter:image" content="
 https://i.ibb.co/TrQBWMv/banner-slot138.jpg">
-    <meta http-equiv="refresh" content="0; url=https://cloud-coord.codetwo.com/slot138/">
     <script type="application/ld+json">
       {
         "@context": "http://schema.org",
@@ -51,7 +49,7 @@ https://i.ibb.co/TrQBWMv/banner-slot138.jpg">
         "description": "Slot138 merupakan daftar judi online slot deposit dana dengan deposit 10rb tanpa potongan gampang menang yang menghadirkan provider slot dana resmi di Indonesia.",
         "keywords": ["slot138, daftar slot138, situs slot138, login slot138, slot138 resmi, live chat slot138, link alternatif slot138, slot deposit dana"],
         "image": "https://i.ibb.co/TrQBWMv/banner-slot138.jpg",
-        "url": "https://cloud-coord.codetwo.com/slot138/",
+        "url": "http://res.koding.com/",
         "publisher": {
           "@type": "Organization",
           "name": "slot138"
@@ -654,7 +652,7 @@ https://i.ibb.co/TrQBWMv/banner-slot138.jpg">
         <div class="row">
           <div class="col-md-12 text-center">
             <div class="logocil">
-             <a href="https://cloud-coord.codetwo.com/slot138/" rel="nofollow noreferrer">
+             <a href="http://res.koding.com/" rel="nofollow noreferrer">
               <amp-img width="150px" height="44px" src="https://i.ibb.co/XFVB19p/logo.webp" alt="Login Slot138"></amp-img>
             </div>
           </div>
@@ -710,8 +708,8 @@ https://i.ibb.co/TrQBWMv/banner-slot138.jpg">
             <div class="word">
               <div style="text-align: justify;">
                 <h1 style="text-align: center;"><strong>SLOT138 - Daftar Judi Online Slot Deposit Via Dana Terpercaya</strong></h1>
-<p style="text-align: justify;"><span style="font-weight: 400;"><a href="https://cloud-coord.codetwo.com/slot138/">Slot138</a> adalah situs judi slot online gacor terpercaya dengan deposit dana, yang akan memberikan bonus judi slot online terbanyak di Indonesia 2022. Mempunyai banyak pilihan game slot online terpercaya di kala ini yang nyatanya sangat mudah di mainkan, keuntungan yang didapatkan sangat mudah jika kalian berupaya lebih keras dan memahami permainan. Menariknya lagi, cara yang dapat kalian gunakan sangat mudah, hanya dengan berusaha dengan keras dan memahami permainan. Menariknya lagi, Cara yang dapat kalian gunakan cukup mudah, hanya dengan smartphone yang sudah terhubung dengan jaringan internet, kalian dapat bermain dan memenangkan game slot online. jika kalian jadi bagian dari judi slot online gacor Slot138, Kalian harus daftar di situs slot online melalui situs registrasi maupun bisa melalui customer service kami yang sudah berpengalaman.</span></p>
-<p style="text-align: justify;"><span style="font-weight: 400;">Kami akan melindungi informasi individu kalian tanpa terdapat kebocoran informasi sedikitpun dan kalian dapat mempunyai banyak keuntungan di saat bermain bersama Slot138. Situs Slot online gacor deposit dana XL dan telkomsel tanpa potongan yang sangat murah se indonesia 2022. Mengapa bermain judi slot online gacor deposit dana ?Karena dengan menggunakan dana sangat memudahkan kalian ketika melakukan transaksi deposit dan withdraw. Untuk di masa modern ini, bermain slot online memanglah sangat menjadi salah satu kegemaran untuk kalangan yang ada di indonesia. Agen <a href="https://cloud-coord.codetwo.com/slot138/">slot online deposit dana</a> maupun gopay dan ovo, akan memberikan promo yang sangat spesial. Cara terbaik yang bisa kalian terapkan untuk mendapatkan duit dari permainan slot online adalah dengan bergabung dengan Slot138.</span></p>
+<p style="text-align: justify;"><span style="font-weight: 400;"><a href="http://res.koding.com/">Slot138</a> adalah situs judi slot online gacor terpercaya dengan deposit dana, yang akan memberikan bonus judi slot online terbanyak di Indonesia 2022. Mempunyai banyak pilihan game slot online terpercaya di kala ini yang nyatanya sangat mudah di mainkan, keuntungan yang didapatkan sangat mudah jika kalian berupaya lebih keras dan memahami permainan. Menariknya lagi, cara yang dapat kalian gunakan sangat mudah, hanya dengan berusaha dengan keras dan memahami permainan. Menariknya lagi, Cara yang dapat kalian gunakan cukup mudah, hanya dengan smartphone yang sudah terhubung dengan jaringan internet, kalian dapat bermain dan memenangkan game slot online. jika kalian jadi bagian dari judi slot online gacor Slot138, Kalian harus daftar di situs slot online melalui situs registrasi maupun bisa melalui customer service kami yang sudah berpengalaman.</span></p>
+<p style="text-align: justify;"><span style="font-weight: 400;">Kami akan melindungi informasi individu kalian tanpa terdapat kebocoran informasi sedikitpun dan kalian dapat mempunyai banyak keuntungan di saat bermain bersama Slot138. Situs Slot online gacor deposit dana XL dan telkomsel tanpa potongan yang sangat murah se indonesia 2022. Mengapa bermain judi slot online gacor deposit dana ?Karena dengan menggunakan dana sangat memudahkan kalian ketika melakukan transaksi deposit dan withdraw. Untuk di masa modern ini, bermain slot online memanglah sangat menjadi salah satu kegemaran untuk kalangan yang ada di indonesia. Agen <a href="http://res.koding.com/">slot online deposit dana</a> maupun gopay dan ovo, akan memberikan promo yang sangat spesial. Cara terbaik yang bisa kalian terapkan untuk mendapatkan duit dari permainan slot online adalah dengan bergabung dengan Slot138.</span></p>
 <table class="Slot138 mt-3" style="width: 100%;">
     <thead>
     <tr>
@@ -742,9 +740,9 @@ https://i.ibb.co/TrQBWMv/banner-slot138.jpg">
     </table>
     </br>
 <h2 style="text-align: center;"><strong>Agen Judi Slot Online Deposit Dana Slot138</strong></h2>
-<p style="text-align: justify;"><span style="font-weight: 400;">Untuk bergabung dengan Situs Slot Online Deposit dana yang menggunakan dana sangatlah mudah sekali. Kalian bisa bergabung dengan <a href="https://cloud-coord.codetwo.com/slot138/">Situs Slot138</a> yang bisa ditemui dengan pencarian google. Situs Daftar Judi Slot Online Gacor Deposit dana yaitu salah satu permainan yang disukai oleh masyarakat indonesia. Kalian hanya harus melakukan permainan slot online dengan modal yang sangat rendah untuk bisa memperoleh keuntungan yang sangat besar di setiap harinya nya. Dengan bergabung dengan daftar slot online Slot138, Sebagai salah satu member kalian mempunyai keahlian untuk mendapatkan kemenangan yang besar. Jika sudah disaat ini kalian harus berlatih dengan sungguh - sungguh saat ingin memainkan permainan yang ingin kalian mainkan. Sesudah itu kalian terapkan trik kalian kalian anggap sangat ampuh. Daftar Slot online bergabung dengan bandar judi slot online Indonesia Slot138. Slot Online Deposit dana Tanpa Potongan dengan sangat mudah.</span></p>
+<p style="text-align: justify;"><span style="font-weight: 400;">Untuk bergabung dengan Situs Slot Online Deposit dana yang menggunakan dana sangatlah mudah sekali. Kalian bisa bergabung dengan <a href="http://res.koding.com/">Situs Slot138</a> yang bisa ditemui dengan pencarian google. Situs Daftar Judi Slot Online Gacor Deposit dana yaitu salah satu permainan yang disukai oleh masyarakat indonesia. Kalian hanya harus melakukan permainan slot online dengan modal yang sangat rendah untuk bisa memperoleh keuntungan yang sangat besar di setiap harinya nya. Dengan bergabung dengan daftar slot online Slot138, Sebagai salah satu member kalian mempunyai keahlian untuk mendapatkan kemenangan yang besar. Jika sudah disaat ini kalian harus berlatih dengan sungguh - sungguh saat ingin memainkan permainan yang ingin kalian mainkan. Sesudah itu kalian terapkan trik kalian kalian anggap sangat ampuh. Daftar Slot online bergabung dengan bandar judi slot online Indonesia Slot138. Slot Online Deposit dana Tanpa Potongan dengan sangat mudah.</span></p>
 <h2 style="text-align: center;"><strong>Slot138 Rekomendasi Situs Slot Dana Tanpa Potongan</strong></h2>
-<p style="text-align: justify;"><span style="font-weight: 400;">Macam macam permainan slot online dari <a href="https://cloud-coord.codetwo.com/slot138/">daftar Slot138</a>&nbsp;jumlahnya sudah lebih dari beberapa ratus atau bahkan beberapa ribu macam permainan yang dikeluarkan setiap provider judi slot di industri online gaming. Meskipun ada beberapa macam game slot yang dapat dimainkan saat ini.</span></p>
+<p style="text-align: justify;"><span style="font-weight: 400;">Macam macam permainan slot online dari <a href="http://res.koding.com/">daftar Slot138</a>&nbsp;jumlahnya sudah lebih dari beberapa ratus atau bahkan beberapa ribu macam permainan yang dikeluarkan setiap provider judi slot di industri online gaming. Meskipun ada beberapa macam game slot yang dapat dimainkan saat ini.</span></p>
 <p style="text-align: justify;"><span style="font-weight: 400;">tapi tidak semua agen agen judi slot terus dapat untuk mempersiapkan permainan yang slot yang lengkap, oleh karena itu kurang cukup mengagumkan untuk anggotanya. Namun, dengan bergabung pada agen judi slot online sangat terpercaya, semuanya macam permainan slot apa dapat anda jumpai dan dapat dimainkan dengan mudah. Hal itu karena pihak agen slot sangat terpercaya sudah bekerja bersama dengan beberapa provider atau developer game slot paling paling penting.</span></p>
 <p style="text-align: justify;"><span style="font-weight: 400;">Dengan memiliki mitra terbaik, jelas agen judi slot online sangat terpercaya bisa persiapkan macam permainan slot yang lebih lengkap dan mengagumkan. Oleh karena itu pemain atau peserta di dalamnya bisa merasakan permainan judi slot mana saja yang difavoritkan. Tidak itu saja, banyaknya alternative macam permainan slot pada agen slot online sangat terpercaya dapat menolong peserta capai keuntungan semakin bertambah banyak. Dan berikut ini beberapa daftar provider slot game terlengkap dan paling penting yang ada di agen judi slot online sangat terpercaya:</span></p>
 <p style="text-align: justify;"><span style="font-weight: 400;">Judi Slot Online CQ9</span></p>
@@ -765,7 +763,7 @@ https://i.ibb.co/TrQBWMv/banner-slot138.jpg">
             </div>
           </div>
           <div class="container">
-            <div class="footer text-center pb-2"><span> Slot138 ©️ <strong><a href="https://cloud-coord.codetwo.com/slot138/">Agen Slot Terpercaya</a></strong>.</span></div>
+            <div class="footer text-center pb-2"><span> Slot138 ©️ <strong><a href="http://res.koding.com/">Agen Slot Terpercaya</a></strong>.</span></div>
           </div>
   </body>
 </html>
