--- a/index.html
+++ b/index.html
@@ -671,8 +671,8 @@ https://i.ibb.co/TrQBWMv/banner-slot138.jpg">
           </div>
           <div class="col-md-8">
             <div class="row logform">
-              <div class="col-xs-6"><a href="https://rebrand.ly/refslot1" rel="nofollow noreferrer"><button type="Daftar Slot138" class="btn btn-log">Daftar</button></a></div>
-              <div class="col-xs-6"><a href="https://b138.fun/lp_pusat/" rel="nofollow noreferrer"><span class="blink-me"><button type="Login Slot138" class="btn btn-daf">login</button></span></a></div>
+              <div class="col-xs-6"><a href="https://rebrand.ly/slot138_daftar" rel="nofollow noreferrer"><button type="Daftar Slot138" class="btn btn-log">Daftar</button></a></div>
+              <div class="col-xs-6"><a href="https://rebrand.ly/slot138_daftar" rel="nofollow noreferrer"><span class="blink-me"><button type="Login Slot138" class="btn btn-daf">login</button></span></a></div>
             </div>
           </div>
         </div>
